@@ -1,5 +1,6 @@
 Changes for 1.3.5:
 
+ - fixed dependences of deleted elements for actions (Eugene) 
  - developed slideshows (Eugene)
  - fixed carceling of frontend installation screen (Eugene)
  - fixed processing of COUNTER64 SNMP values (Alexei)
